Fauxton: Spinner shows before routeObject establish Hide field editor for now Documents view trash cash enabled on item selected Jump to doc working Fauxton fix views page Fixes for docs

--- a/src/fauxton/assets/less/fauxton.less
+++ b/src/fauxton/assets/less/fauxton.less
@@ -22,6 +22,7 @@
 @import "prettyprint.less";
 @import "database.less";
 @import "icons.less";
+@import "mixins.less";
 
 /*define variable for color here, remove to seperate file later*/
 
@@ -671,9 +672,19 @@ tr.all-docs-item{
   color: @fontGrey;
 }
 
-
 div.spinner {
   position: absolute;
   left: 50%;
   top: 50%;
+}
+
+/* Code mirror overrides */
+.CodeMirror-scroll {
+  .border-radius(2px);
+  border: solid 1px #ddd;
+}
+
+.btn-primary a:visited {
+  color: #fff;
+
 }
